--- a/src/app/landloardDash/documents/documents.component.html
+++ b/src/app/landloardDash/documents/documents.component.html
@@ -129,7 +129,7 @@
                         
                     
                         <div class="table-responsive main-table">
-                           <table class="table table-content ">
+                           <table class="table table-content allDoc">
                               <thead class=" text-primary table-heading ">
                                  <tr>
                                     <th> Document Name</th>
