--- a/src/app/landloardDash/request-landloard-dash/request-landloard-dash.component.html
+++ b/src/app/landloardDash/request-landloard-dash/request-landloard-dash.component.html
@@ -22,7 +22,7 @@
                 <span class="selectDiv">
                   <select class='select-option' required [(ngModel)]='optionSelect'
                     (ngModelChange)='onSearch()' formControlName="optionSelect">
-                    <option [ngValue]="undefined" > Please select one status </option>
+                    <option value="" [selected]="true"> Please select one status </option>
                     <option class='option' *ngFor='let option of options' [value]="option">{{option}}</option>
                   </select>
                   <i class="fa fa-angle-down" aria-hidden="true"></i>
@@ -67,13 +67,13 @@
                           </button>
                           <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                             <button class="dropdown-item dropMenu" type="button"
-                              (click)="accept_decline_request_status(items,'accept')">
+                              (click)="accept_decline_request_status(items,'accept',items.tenant_id)">
                               Accept</button>
                             <button class="dropdown-item dropMenu" type="button"
-                              (click)="accept_decline_request_status(items,'decline')">
+                              (click)="accept_decline_request_status(items,'decline',items.tenant_id)">
                               Decline</button>
                             <button class="dropdown-item dropMenu" type="button"
-                              (click)="deleteRequestStatus(items.id,i)">
+                              (click)="deleteRequestStatus(items.id,i,'',items.tenant_id)">
                               Delete</button>
                           </div>
                         </div>
